# rcy

./: .gitignore  AKAIS1000.md  CLAUDE.md  CLAUDE_INIT.md  CMakeLists.txt  CODEX.md  CONTRIBUTING.md  PLAYBACKANDEXPORTPIPELINES.md  README.md  TODO  debug_app.py  drum_and_bass_sample_techniques.md  issue_92_downsampling_tests.md  issue_93_gui_testing.md  pytest.ini  rcy.py  rcy2.py  rcy3.py  requirements.txt  scroll.py  tal  test_export_pipeline.py
config/: audio.json  colors.json  config.json  strings.json  ui.json
demos/: DJSS_Black.sfz  Dimension_UK.sfz  JMajik_Your_Sound.sfz  Renegade_T3rr0r1st.sfz  Souljah_Fade_To_Black.sfz
designs/: downsampling-strategy.md  pyqtgraph-migration.md
docs/: breakbeat-science.md
docs/design/: segments_and_markers.md
include/: time_stretch.hpp
presets/: README.md  presets.json
presets/amen/: bukem.sfz  notes.md
presets/amen_classic/: dillinja.sfz
presets/apache_break/: notes.md  photek.sfz
presets/think_break/: notes.md  paradox.sfz  source_direct.sfz
roadmap/: roadmap-april-2025.md
src/: .rcy_controller.py.swp  .rcy_view.py.swp  akai_s1000.py  audio_processor.py  main.py  rcy_controller.py  rcy_view.py  timestretch.py
src/cpp/: time_stretch.cpp
src/python/: akai_s1000.py  audio_processor.py  config_manager.py  error_handler.py  export_utils.py  main.py  rcy_controller.py  rcy_view.py  waveform_view.py  (+4 more)
tests/: __init__.py  conftest.py  test_audio_processing_pipeline.py  test_configurable_transient_detection.py  test_downsampling_integration.py  test_playback_tempo_functionality.py  test_sfz_generator_cli.py
(+16 files in other folders)
